# minesweeper_ml_project

./: .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt
checkpoints/: training_stats.json
features/: agent_behavior.feature  minesweeper_game.feature
src/agents/: __init__.py  base_agent.py  dqn_agent.py  hybrid_agent.py  logic_agent.py  random_agent.py
src/game/: __init__.py  board.py  cell.py  environment.py
src/training/: __init__.py  trainer.py
tests/: conftest.py
tests/unit/: test_board.py  test_cell.py
