[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minesweeper-ml"
version = "0.1.0"
description = "Machine Learning agents for Minesweeper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "manchesterjm"}
]
keywords = ["minesweeper", "reinforcement-learning", "pytorch", "dqn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-bdd>=6.1.0",
    "hypothesis>=6.82.0",
    "mutmut>=2.4.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Repository = "https://github.com/manchesterjm/minesweeper_ml_project"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.pylint.main]
py-version = "3.10"
load-plugins = ["pylint.extensions.docparams"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 88

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
